@@ -26,8 +26,8 @@ public class CloudExplorer {
                 + "\nlistbuckets"
                 + "\nrmbucket bucket"
                 + "\nmakebucket what"
-                + "\nsynctos3 location bucket"
-                + "\nsyncfroms3 destination bucket"
+                + "\nsynctos3 location bucket [folder]"
+                + "\nsyncfroms3 destination bucket [folder]"
                 + "\nuploadtest bucket size threads operations [mixed]"
                 + "\ndownloadtest bucket size threads operations [mixed]"
                 + "\nsearch bucket what"
